# cxxprobe

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PLAN.md  README.md  SECURITY.md  USAGE.md  conanfile.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release-assets.yml  release.yml
cli/: CMakeLists.txt  main.cpp
cli/commands/: bundle_cmd.cpp  bundle_cmd.hpp  identity_cmd.cpp  identity_cmd.hpp  new_cmd.cpp  new_cmd.hpp  run_cmd.cpp  run_cmd.hpp  serve_cmd.cpp  serve_cmd.hpp  test_cmd.cpp  test_cmd.hpp
cli/common/: color.cpp  color.hpp  json_io.cpp  json_io.hpp  text_utils.cpp  text_utils.hpp
cmake/: CodeCoverage.cmake  Sanitizers.cmake
docs/: .gitignore  next.config.mjs  package-lock.json  package.json
docs/app/: globals.css  layout.jsx
docs/content/: _meta.js  cli-reference.mdx  contributing.mdx  faq.mdx  getting-started.mdx  index.mdx
docs/content/architecture/: _meta.js  ams-integration-contract.mdx  folder-structure.mdx  http-service.mdx  resource-limits.mdx  sandbox-internals.mdx
docs/content/guides/: _meta.js  batch-mode.mdx  build-a-contest.mdx  contest-workflows.mdx  custom-checker.mdx  http-judging-service.mdx  json-output.mdx  single-run-judging.mdx  stress-testing.mdx
docs/public/: install.sh
include/cxxprobe/: bundle.hpp  cases.hpp  compile.hpp  cxxprobe.h  cxxprobe.hpp  gtest_report.hpp  judge.hpp  problem.hpp  sandbox.hpp  symbolic.hpp
server/: CMakeLists.txt  app.cpp  app.hpp
server/api/: dto.cpp  dto.hpp
server/config/: server_config.hpp
server/events/: event.cpp  event.hpp  ievent_bus.hpp  local_event_bus.cpp  local_event_bus.hpp
server/handlers/: events_handler.cpp  events_handler.hpp  health_handler.cpp  health_handler.hpp  metrics_handler.cpp  metrics_handler.hpp  problems_handler.cpp  problems_handler.hpp  submissions_handler.cpp  submissions_handler.hpp  ui_asset_handler.cpp  ui_asset_handler.hpp
server/judge/: cxxprobe_judge_service.cpp  cxxprobe_judge_service.hpp  ijudge_service.hpp
server/metrics/: metrics_registry.cpp  metrics_registry.hpp  prometheus_text_exporter.cpp  prometheus_text_exporter.hpp
server/middleware/: cors_middleware.cpp  cors_middleware.hpp  error_middleware.cpp  error_middleware.hpp  logging_middleware.cpp  logging_middleware.hpp  middleware.hpp  middleware_chain.cpp  middleware_chain.hpp
server/queue/: concurrentqueue_submission_queue.cpp  concurrentqueue_submission_queue.hpp  isubmission_queue.hpp  submission_job.hpp
server/repository/: isubmission_repository.hpp  sqlite_connection.cpp  sqlite_connection.hpp  sqlite_submission_repository.cpp  sqlite_submission_repository.hpp  submission_record.cpp  submission_record.hpp
server/router/: request.cpp  request.hpp  response.cpp  response.hpp  route_pattern.cpp  route_pattern.hpp  router.cpp  router.hpp
server/services/: problem_catalog_service.cpp  problem_catalog_service.hpp  submission_service.cpp  submission_service.hpp
server/ui/: CMakeLists.txt  embedded_assets.hpp  generate_embedded_assets.py
server/ui/assets/: index.html
server/ui/assets/css/: app.css
server/ui/assets/js/: app.js
server/worker/: worker.cpp  worker.hpp  worker_manager.cpp  worker_manager.hpp
src/: CMakeLists.txt  dummy.cpp
src/bundle/: bundle.cpp
src/cases/: cases.cpp
src/compile/: compile.cpp
src/gtest_report/: gtest_report.cpp
src/judge/: judge.cpp  judge_json.cpp
src/problem/: problem.cpp
src/sandbox/: sandbox.cpp
src/sandbox/detail/: cgroup.cpp  cgroup.hpp  child.cpp  child.hpp  pipe_sync.cpp  pipe_sync.hpp  uidmap.cpp  uidmap.hpp
src/symbolic/: symbolic.cpp
tests/: CMakeLists.txt
tests/fixtures/: bundle_manifest_v2.golden.json
tests/helpers/: CMakeLists.txt  bigwriter.cpp  memhog.cpp  spinner.cpp
tests/integration/: CMakeLists.txt  dummy_integration.cpp  identity_cli_test.cpp  problem_pipeline_test.cpp  rlimit_cpu_test.cpp  sandbox_run_test.cpp  server_pipeline_test.cpp
tests/server/: CMakeLists.txt  dto_test.cpp  event_bus_test.cpp  handlers_test.cpp  metrics_test.cpp  middleware_test.cpp  queue_test.cpp  router_test.cpp  sqlite_submission_repository_test.cpp  ui_asset_handler_test.cpp
tests/unit/: CMakeLists.txt  bundle_test.cpp  cgroup_test.cpp  cli_util_test.cpp  dummy_test.cpp  gtest_report_test.cpp  judge_json_test.cpp  pipe_sync_test.cpp  problem_config_test.cpp  symbolic_test.cpp
